more optimising flags